f*cking header and footer

--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -18,6 +18,7 @@ main {
 
 body {
   padding-top: 0rem;
+  background: #FEFFFF;
 }
 
 content-holder{
@@ -27,7 +28,7 @@ content-holder{
 
 #header {
   margin-top: 0rem;
-  height: 3rem;
+  //height: 3rem;
 }
 
 #header, #footer {
@@ -92,4 +93,25 @@ ul.course-categories {
 .ui.form.psychtest .inline.fields {
   margin : 0;
 }
+
+.nav-horizontal .nav-link {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.nav-horizontal .nav-link:hover{
+  background: #313233;
+  color: #1AA59E;
+}
+
+.nav-link {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.footer-view {
+  background: #D8E0E4;
+  padding-top: 3rem;
+}
+
 
