--- a/dionysus-client/yo/templates/home/consultant/consultantHome.jade
+++ b/dionysus-client/yo/templates/home/consultant/consultantHome.jade
@@ -9,7 +9,7 @@
 					a.item(href="/consultants/list/{{name}}"){{name}}
 					{{/each}}
 		.column
-			img(src="/public/images/info.jpg")
+			img(src="/public/images/consultant/info.jpg")
 	.row
 		.ui.three.column.stackable.grid
 			{{#each items}}
