--- a/dionysus-client/yo/templates/home/footer.jade
+++ b/dionysus-client/yo/templates/home/footer.jade
@@ -1,51 +1,55 @@
-.pure-g
-  .pure-u-1.pure-u-md-1-4.pure-u-lg-1-4
-    .ui.header
-      h4 心理圈
-    .ui.list
-      .item
-        a 汇心心理服务小站
-      .item
-        a 汇心心理学院
-      .item
-        a 第三方机构
-  .pure-u-1.pure-u-md-1-4.pure-u-lg-1-4
-    .ui.header
-      h4 友情链接
-    .ui.list
-      .item
-        a 友情链接1
-      .item
-        a 友情链接2
-      .item
-        a 友情链接3
-      .item
-        a 友情链接4
-  .pure-u-1.pure-u-md-1-4.pure-u-lg-1-4
-    .ui.header
-      h4 关于汇心
-    .ui.list
-      .item
-        a 汇心心理品牌
-      .item
-        a 汇心大事记
-      .item
-        a 资质与荣誉
-      .item
-        a 版权声明
-      .item
-        a 联系我们
-  .pure-u-1.pure-u-md-1-4.pure-u-lg-1-4
-    .ui.header
-      h4 加入汇心
-    .ui.list
-      .item
-        a 企业报班
-      .item
-        a 学校报班
-      .item
-        a 个人
-.pure-g
-  .pure-u-1
-    .ui.divider
-    .address 地址
+.ui.centered.grid
+  .twelve.wide.column
+    .ui.four.column.horizontally.padded.stackable.grid
+      .equal.height.row
+        .grey.column
+          .ui.header
+            h4 友情链接
+          .ui.list
+            .item
+              a 友情链接1
+            .item
+              a 友情链接2
+            .item
+              a 友情链接3
+            .item
+              a 友情链接4
+        .grey.column
+            .ui.header
+              h4 心理圈
+            .ui.list
+              .item
+                a 汇心心理服务小站
+              .item
+                a 汇心心理学院
+              .item
+                a 第三方机构
+        .grey.column
+            .ui.header
+              h4 关于汇心
+            .ui.list
+              .item
+                a 汇心心理品牌
+              .item
+                a 汇心大事记
+              .item
+                a 资质与荣誉
+              .item
+                a 版权声明
+              .item
+                a 联系我们
+        .grey.column
+            .ui.header
+               h4 加入汇心
+            .ui.list
+              .item
+                a 企业报班
+              .item
+                a 学校报班
+              .item
+                a 个人
+      .centerd.row
+        .grey.eight.wide.column
+          .ui.basic.center.aligned.segment
+            p 地址 xxxxxx
+                    
