--- a/dionysus-client/yo/templates/home/header/nav.jade
+++ b/dionysus-client/yo/templates/home/header/nav.jade
@@ -1,31 +1,22 @@
-.pure-g.logo-bar
-	.pure-u-2-5
-		a.logo.pure-menu-heading
-			img.pure-img(src="/public/images/logo.jpg")
-	.pure-u-3-5
-		.pure-menu.pure-menu-horizontal.login-menu
-			ul.pure-menu-list
-				li.pure-menu-item
-					a#login.pure-menu-link(href="#") 登录
-				li.pure-menu-item
-					a.pure-menu-link(href="/register") 注册
-				li.pure-menu-item
-					a.pure-menu-link(href="#") 关于我们
-.home-menu-bar
-	.home-menu.pure-menu.pure-menu-horizontal
-		ul.pure-menu-list
-			li.pure-menu-item
-				a.absolute-center.pure-menu-link(href="/site") 首页
-			li.pure-menu-item
-				a.pure-menu-link(href="/articles") 心理知识
-			li.pure-menu-item
-				a.pure-menu-link(href="/consultants") 心理咨询
-			li.pure-menu-item
-				a.pure-menu-link(href="/courses") 心理课程
-			li.pure-menu-item
-				a.pure-menu-link(href="/psychtestsuites") 心理测试
-			li.pure-menu-item
-				a.pure-menu-link(href="#") 心理FM
-			li.pure-menu-item
-				a.pure-menu-link(href="#") 其他
-
+.ui.stackable.grid
+	.centered.row
+		.twelve.wide.column
+			.ui.middle.aligned.stackable.grid
+				.eight.wide.column
+					img.image(src="/public/images/logo.jpg")
+				.eight.wide.right.aligned.column
+					.ui.text.menu
+						a#login.item(href="#") 登录
+						a.item(href="/register") 注册
+						a.item(href="#") 关于我们
+	.ui.inverted.teal.vertical.segment
+		.ui.page.stackable.centered.grid
+			.twelve.wide.column.nav-line
+				.nav-horizontal
+					a.nav-link(href="/site") 首页
+					a.nav-link(href="/articles") 心理知识
+					a.nav-link(href="/consultants") 心理咨询
+					a.nav-link(href="/courses") 心理课程
+					a.nav-link(href="/psychtestsuites") 心理测试
+					a.nav-link(href="#") 心理FM
+			
