fix nav bar padding

--- a/dionysus-client/yo/templates/home/header/login.jade
+++ b/dionysus-client/yo/templates/home/header/login.jade
@@ -12,7 +12,7 @@
 						a.item(href="/logout") 退出
 	.ui.inverted.teal.vertical.segment
 		.ui.page.stackable.centered.grid
-			.twelve.wide.column.nav-line
+			.twelve.wide.column.nav-line(style="padding:0;")
 				.nav-horizontal
 					a.nav-link(href="/site") 首页
 					a.nav-link(href="/articles") 心理知识
