--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -107,6 +107,9 @@ ul.course-categories {
 .nav-link {
   padding-left: 1rem;
   padding-right: 1rem;
+  padding-top: 1em;
+  padding-bottom: 1rem;
+  color: #FEFFFF;
 }
 
 .footer-view {
