--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -4,7 +4,7 @@ main {
   margin-top: 1rem;
   margin-bottom: 1rem;
   padding: 1rem;
-  padding-bottom: 60px;
+  padding-bottom: 0px;
 }
 
 .jumbotron {
@@ -55,6 +55,7 @@ content-holder{
   #main {
     width: 100%;
     margin: 0 auto;
+    padding-top: 2rem
   } 
   .container {
     width: ~"calc(100% - 325px)";
@@ -112,9 +113,21 @@ ul.course-categories {
   color: #FEFFFF;
 }
 
+#colored-bar {
+  line-height: 6px;
+  background: #1AA69E;
+  position: relative;
+}
+
 .footer-view {
   background: #D8E0E4;
   padding-top: 3rem;
+  margin: 0 auto;
+}
+
+.region-summary {
+  padding-top: 1rem;
+  padding-bottom: 2rem;
 }
 
 
