--- a/dionysus-client/yo/templates/home/article/detailPage/detail.jade
+++ b/dionysus-client/yo/templates/home/article/detailPage/detail.jade
@@ -1,6 +1,7 @@
-.ui.two.column.divided.stackable.equal.height.grid
-  .ten.wide.column
-    #detail.article-content
-  .six.wide.column
-    #latest.article-right-content
-    #tag.article-right-content
+.twelve.wide.column
+	.ui.two.column.divided.stackable.equal.height.grid
+		.ten.wide.column
+			#detail.article-content
+		.six.wide.column
+			#latest.article-right-content
+			#tag.article-right-content
