--- a/dionysus-client/yo/templates/home/article/detailPage/detailContent.jade
+++ b/dionysus-client/yo/templates/home/article/detailPage/detailContent.jade
@@ -13,7 +13,7 @@
           form.ui.reply.form
             .field
               textarea(name="mycomment", value="{{mycomment}}")
-            .ui.primary.submit.labeled.icon.button
+            .ui.submit.labeled.icon.green.button
               i.icon.edit
               |发布
           .ui.divider
