--- a/dionysus-client/yo/templates/home/header/login.jade
+++ b/dionysus-client/yo/templates/home/header/login.jade
@@ -14,10 +14,11 @@
 		.ui.page.stackable.centered.grid
 			.twelve.wide.column.nav-line(style="padding:0;")
 				.nav-horizontal
-					a.nav-link(href="/site") 首页
+					a.nav-link(href="/") 首页
 					a.nav-link(href="/articles") 心理知识
 					a.nav-link(href="/consultants") 心理咨询
 					a.nav-link(href="/courses") 心理课程
 					a.nav-link(href="/psychtestsuites") 心理测试
 					a.nav-link(href="#") 心理FM
-			
+	.row
+		div#colored-bar fff
