--- a/dionysus-client/yo/templates/home/header/nav.jade
+++ b/dionysus-client/yo/templates/home/header/nav.jade
@@ -13,7 +13,7 @@
 		.ui.page.stackable.centered.grid
 			.twelve.wide.column.nav-line
 				.nav-horizontal
-					a.nav-link(href="/site") 首页
+					a.nav-link(href="/") 首页
 					a.nav-link(href="/articles") 心理知识
 					a.nav-link(href="/consultants") 心理咨询
 					a.nav-link(href="/courses") 心理课程
