--- a/dionysus-client/yo/templates/home/article/homePage/articleDocSummary.jade
+++ b/dionysus-client/yo/templates/home/article/homePage/articleDocSummary.jade
@@ -1,26 +1,27 @@
-.pure-g
-	.pure-u-1.pure-u-md-1-2.pure-u-lg-1-2
-		.pure-g
-			.pure-u-1.article-more
-				a(href="/articles/list/cat{{items.[0].category.id}}/typeDOC")
-					h2 更多文章 
-		.pure-g
-			.pure-u-1.pure-u-md-1-2.pure-u-lg-1-2
-				.ui.list
-					.item
-						a(href="/articles/{{items.[0].id}}") {{items.[0].title}}
-					.item
-						a(href="/articles/{{items.[1].id}}") {{items.[1].title}}
-					.item
-						a(href="/articles/{{items.[2].id}}") {{items.[2].title}}
-			.pure-u-1.pure-u-md-1-2.pure-u-lg-1-2
-				.ui.list
-					.item
-						a(href="/articles/{{items.[3].id}}") {{items.[3].title}}
-					.item
-						a(href="/articles/{{items.[4].id}}") {{items.[4].title}}
-					.item
-						a(href="/articles/{{items.[5].id}}") {{items.[5].title}}
-	.pure-u-1.pure-u-md-1-2.pure-u-lg-1-2
-		a(href="/articles/{{items.[0].id}}")
-			img(src="{{items.[0].cover}}")
+.ui.middle.aligned.stackable.grid
+	.two.column.row
+		.column
+			.row
+				h2.ui.header
+					a(href="/articles/list/cat{{items.[0].category.id}}/typeDOC") 更多文章
+			.ui.two.column.stackable.grid
+				.column
+					.ui.basic.segment
+						.ui.list
+							a.item(href="/articles/{{items.[0].id}}") {{items.[0].title}}
+							a.item(href="/articles/{{items.[1].id}}") {{items.[1].title}}
+							a.item(href="/articles/{{items.[2].id}}") {{items.[2].title}}
+				.column
+					.ui.basic.segment
+						.ui.list
+							a.item(href="/articles/{{items.[3].id}}") {{items.[3].title}}
+							a.item(href="/articles/{{items.[4].id}}") {{items.[4].title}}
+							a.item(href="/articles/{{items.[5].id}}") {{items.[5].title}}
+		.column
+			.ui.basic.segment
+				a(href="/articles/{{items.[0].id}}")
+					{{#if items.[0].cover}}
+					img.ui.medium.image(src="{{items.[0].cover}}")
+					{{else}}
+					img.ui.medium.image(src="/public/images/placeholder.png")
+					{{/if}}
