--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -53,6 +53,7 @@ html(class="no-js")
   script(src="/scripts/common/course.js")
   script(src="/scripts/common/consultant.js")
   script(src="/scripts/common/appointment.js")
+  script(src="/scripts/common/psychoprofile.js")
   script(src="/scripts/common/menu.js")
   script(src="/scripts/common/header.js")
   script(src="/scripts/admin/admin.js")
