--- a/dionysus-client/yo/templates/admin/appointments/appointmentitem.jade
+++ b/dionysus-client/yo/templates/admin/appointments/appointmentitem.jade
@@ -11,4 +11,4 @@ td.state
 td.save
   .ui.small.green.save.button 保存
   .ui.small.button(style="margin-left:20px;") 删除
-  .ui.small.red.button(style="margin-left:20px;") 输入档案
+  .ui.small.red.input.button(style="margin-left:20px;") 输入档案
