--- a/dionysus-client/yo/templates/home/consultant/consultantDetail.jade
+++ b/dionysus-client/yo/templates/home/consultant/consultantDetail.jade
@@ -71,5 +71,7 @@
 								a《咨询协议》
 					.ui.centered.grid
 						.ten.wide.centered.column
-							.fluid.ui.submit.green.button 提交
-					.ui.error.message	
+							.ui.basic.segment
+								.fluid.ui.submit.green.button 提交
+					.ui.basic.segment
+						.ui.error.message	
