--- a/dionysus-client/yo/templates/home/consultant/consultantHome.jade
+++ b/dionysus-client/yo/templates/home/consultant/consultantHome.jade
@@ -11,7 +11,8 @@
 						a.item(href="/consultants/list/{{name}}"){{name}}
 						{{/each}}
 			.column
-				img(src="/public/images/consultant/info.jpg")
+				a(href="/consultants/info/detail")
+					img(src="/public/images/consultant/info.jpg")
 		.row
 			.ui.three.column.stackable.grid
 				{{#each items}}
