--- a/dionysus-client/yo/templates/home/site.jade
+++ b/dionysus-client/yo/templates/home/site.jade
@@ -3,7 +3,7 @@
   .eight.wide.column.dialogue
     .ui.header
       h1 汇心网，关怀无处不在
-      p 这个全世界最专业的中文心理网站，集专业与娱乐于一体与您贴心相伴，随时，随地，随心。
+      p 24小时x360度零距离与您贴心相伴
 
 .ui.divider
 
