--- a/dionysus-client/yo/app/jade/layout.jade
+++ b/dionysus-client/yo/app/jade/layout.jade
@@ -1,7 +1,8 @@
 div#header
 main#main
 footer#footer
-#dialog
+#login-dialog
+#register-dialog
 
 include ./templates/articles
 include ./templates/consultant
