--- a/dionysus-client/yo/templates/home/header/nav.jade
+++ b/dionysus-client/yo/templates/home/header/nav.jade
@@ -7,11 +7,11 @@
 				.eight.wide.right.aligned.column
 					.ui.text.menu
 						a#login.item(href="#") 登录
-						a.item(href="/register") 注册
+						a#register.item(href="#") 注册
 						a.item(href="#") 关于我们
 	.ui.inverted.teal.vertical.segment
 		.ui.page.stackable.centered.grid
-			.twelve.wide.column.nav-line
+			.twelve.wide.column.nav-line(style="padding:0;")
 				.nav-horizontal
 					a.nav-link(href="/") 首页
 					a.nav-link(href="/articles") 心理知识
@@ -19,4 +19,5 @@
 					a.nav-link(href="/courses") 心理课程
 					a.nav-link(href="/psychtestsuites") 心理测试
 					a.nav-link(href="#") 心理FM
-			
+	.row
+		div#colored-bar fff			
