--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -22,7 +22,7 @@ body {
 }
 
 content-holder{
-  height: auto; 
+  height: auto;
   min-height: 100%;
 }
 
@@ -40,7 +40,7 @@ content-holder{
   #main {
     width: 100%;
     margin: 0 auto;
-  }  
+  }
   .right.rail {
     display: none;
   }
@@ -56,7 +56,7 @@ content-holder{
     width: 100%;
     margin: 0 auto;
     padding-top: 2rem
-  } 
+  }
   .container {
     width: ~"calc(100% - 325px)";
     position: relative;
@@ -134,3 +134,45 @@ ul.course-categories {
   background: #F5F5F6;
 }
 
+.course .pagenation {
+  text-align: center;
+}
+
+.course .category label {
+  margin-right:20px;
+}
+
+.course.title.link {
+  text-align:center;
+  padding-top:20px;
+}
+
+.course a.title {
+  color:purple;
+}
+
+h1.reporter.title{
+  text-align:center;
+  margin-top:30px;
+  margin-bottom:20px;
+  font-weight:bold;
+}
+
+#subCats, #approach, #videos {
+  margin-top:10px;
+}
+
+p.course.content {
+  padding:20px 0;
+}
+
+#room .reg {
+  text-align:center;
+  padding-top:20px;
+}
+
+.course .offline.meta {
+  label {
+    padding-right:30px;
+  }
+}
