--- a/dionysus-client/yo/templates/home/course/room.jade
+++ b/dionysus-client/yo/templates/home/course/room.jade
@@ -3,8 +3,10 @@
   .column
     .ui.basic.segment
       img.ui.fluid.image(src="/static/img/1.jpg")
-      .link(style="text-align:center;")
-        a {{title}}
-      .reg(style="text-align:center;")
-        a.ui.tiny.basic.button 加入
+      .course.title.link
+        h5
+          a.title(href="/courses/{{id}}") {{title}}
+      p.course.content {{description}}
+      .reg(style="text-align:center;padding-top:20px;")
+        a.ui.purple.tiny.basic.button(href="/courses/{{id}}/reg") 加 入
   |{{/each}}
