--- a/dionysus-client/yo/templates/home/course/room.jade
+++ b/dionysus-client/yo/templates/home/course/room.jade
@@ -8,5 +8,5 @@
           a.title(href="/courses/{{id}}") {{title}}
       p.course.content {{description}}
       .reg(style="text-align:center;padding-top:20px;")
-        a.ui.purple.tiny.basic.button(href="/courses/{{id}}/reg") 加 入
+        a.ui.purple.tiny.basic.button(href="/courses/{{id}}/regroom") 加 入
   |{{/each}}
