update header style

--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -95,16 +95,12 @@ ul.course-categories {
 }
 
 .nav-link {
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 1em;
-  padding-bottom: 1rem;
+  padding : 1rem;
   color: #FEFFFF;
 }
 
 #colored-bar {
   line-height: 6px;
-  background: #1AA69E;
   position: relative;
 }
 
