--- a/dionysus-client/yo/app/styles/theme.less
+++ b/dionysus-client/yo/app/styles/theme.less
@@ -33,11 +33,7 @@
 /*------------------
        Fonts
 -------------------*/
-
-.loadFonts() when (@importGoogleFonts) {
-  //@import (css) '@{googleProtocol}fonts.googleapis.com/css?family=@{googleFontRequest}';
-  @import (css) 'http://fonts.useso.com/css?family=@{googleFontRequest}';
-}
+.loadFonts() {}
 
 /*------------------
      Overrides
