--- a/dionysus-client/yo/templates/home/profile/personal.jade
+++ b/dionysus-client/yo/templates/home/profile/personal.jade
@@ -49,7 +49,6 @@ form.ui.form
     .ui.left.icon.input
       input(type="text", name="address", value="{{ address }}", required)
       i.home.icon
-  .ui.horizontal.divider
-  .ui.left.icon.input
-    input.ui.submit.button(type="submit", value="保存")
+  .ui.submit.green.button
     i.save.icon
+    |保存  
