--- a/dionysus-client/yo/templates/home/profile/menu.jade
+++ b/dionysus-client/yo/templates/home/profile/menu.jade
@@ -5,7 +5,7 @@
       .content 你好，{{ username  }}
         .sub.header {{ about  }}
         .sub.header 
-          a#myinfo 修改我的个人信息
+          a(href="#")#myinfo 修改我的个人信息
 h4.ui.horizontal.header.divider
   i.bar.char.icon
 .ui.page.stackable.grid
@@ -28,6 +28,10 @@ h4.ui.horizontal.header.divider
           a(href="#")#mytests 
             i.small.circular.question.icon 
             | 我的测试
+        .item
+          a(href="#")#myprofiles 
+            i.small.circular.book.icon 
+            | 我的心理档案
   .row
     .column
       .ui.stacked.segment
