--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -50,6 +50,7 @@ html(class="no-js")
   script(src="/scripts/modules/article/articleHome.js")
   script(src="/scripts/modules/article/articleList.js")
   script(src="/scripts/modules/article/articleDetail.js")
+  script(src="/scripts/modules/article/fm.js")
   script(src="/scripts/modules/category.js")
   script(src="/scripts/modules/site.js")
   script(src="/scripts/modules/consultant/consultant.js")
