--- a/dionysus-client/yo/templates/home/header/nav.jade
+++ b/dionysus-client/yo/templates/home/header/nav.jade
@@ -18,6 +18,6 @@
 					a.nav-link(href="/consultants") 心理咨询
 					a.nav-link(href="/courses") 心理课程
 					a.nav-link(href="/psychtestsuites") 心理测试
-					a.nav-link(href="#") 心理FM
+					a.nav-link(href="/fms") 心理FM
 	.row
 		div#colored-bar
