--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -4,6 +4,7 @@ html(class="no-js")
     meta(charset="utf-8")
     meta(name="description",  content="")
     meta(name="viewport",     content="width=device-width")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge;")
     link(rel="shortcut icon", href="/favicon.ico")
 
     // build:css({.,.tmp}) /styles/admin.css
