fix some small bugs

--- a/dionysus-client/yo/templates/home/article/listPage/articleListItems.jade
+++ b/dionysus-client/yo/templates/home/article/listPage/articleListItems.jade
@@ -8,7 +8,7 @@
 		.ui.items
 			{{#each items}}
 			.item
-				.ui.medium.image
+				.ui.small.image
 					{{#if cover}}
 					img(src="{{cover}}")
 					{{else}}
