--- a/dionysus-client/yo/templates/home/consultant/consultantHome.jade
+++ b/dionysus-client/yo/templates/home/consultant/consultantHome.jade
@@ -20,7 +20,7 @@
 					{{#if avatar}}
 					img.ui.centered.circular.small.image(src="{{avatar}}")
 					{{else}}
-					img.ui.centered.small.image(src="/public/images/placeholder.png")
+					img.ui.centered.circular.small.image(src="/public/images/placeholder.png")
 					{{/if}}
 					.ui.basic.center.aligned.segment
 						h4.ui.center.aligned.header					
