change theme color for green

--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -119,9 +119,9 @@ ul.course-categories {
   padding-top:20px;
 }
 
-.course a.title {
+/*.course a.title {
   color:purple;
-}
+}*/
 
 h1.reporter.title{
   text-align:center;
