--- a/dionysus-client/yo/templates/home/profile/menu.jade
+++ b/dionysus-client/yo/templates/home/profile/menu.jade
@@ -19,7 +19,7 @@ h4.ui.horizontal.header.divider
         .item
           a(href="#")#myappointments 
             i.small.circular.chat.icon
-            | 我的一对一咨询
+            | 我的咨询
         .item
           a(href="#")#mycourses 
             i.small.circular.users.icon 
