--- a/dionysus-client/yo/templates/home/course/home.jade
+++ b/dionysus-client/yo/templates/home/course/home.jade
@@ -60,7 +60,7 @@
                   a.title(href="/courses/{{id}}") {{title}}
               p.course.content {{description}}
               .reg(style="text-align:center;padding-top:20px;")
-                a.ui.purple.tiny.basic.button(href="/courses/{{id}}/regroom") 加 入
+                a.ui.green.tiny.basic.button(href="/courses/{{id}}/regroom") 加 入
           |{{/each}}
       .two.column.centered.row
         .centered.column
@@ -84,6 +84,6 @@
                       label 开课时间 {{date}}
                       label#reg 已注册 {{registered}} 人
                   .column
-                    a.ui.basic.tiny.purple.button(href="/courses/{{id}}/regoffline") 加 入
+                    a.ui.basic.tiny.green.button(href="/courses/{{id}}/regoffline") 加 入
                 |{{/each}}
 
