course detail page

--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -1,3 +1,5 @@
+@import "course";
+
 main {
   display: block;
   min-height: 450px;
@@ -104,48 +106,5 @@ ul.course-categories {
 
 #consultant-desc, #expertise {
   background: #F5F5F6;
-}
-
-.course .pagenation {
-  text-align: center;
-}
-
-.course .category label {
-  margin-right:20px;
-}
-
-.course.title.link {
-  text-align:center;
-  padding-top:20px;
-}
-
-/*.course a.title {
-  color:purple;
-}*/
-
-h1.reporter.title{
-  text-align:center;
-  margin-top:30px;
-  margin-bottom:20px;
-  font-weight:bold;
-}
-
-#subCats, #approach, #videos {
-  margin-top:10px;
-}
-
-p.course.content {
-  padding:20px 0;
-}
-
-#room .reg {
-  text-align:center;
-  padding-top:20px;
-}
-
-.course .offline.meta {
-  label {
-    padding-right:30px;
-  }
 }
 
