--- a/dionysus-client/yo/templates/home/course/room.jade
+++ b/dionysus-client/yo/templates/home/course/room.jade
@@ -7,6 +7,6 @@
         h5
           a.title(href="/courses/{{id}}") {{title}}
       p.course.content {{description}}
-      .reg(style="text-align:center;padding-top:20px;")
-        a.ui.purple.tiny.basic.button(href="/courses/{{id}}/regroom") 加 入
+      .regBtn(style="text-align:center;padding-top:20px;")
+        a.reg.ui.purple.tiny.basic.button(href="/courses/{{id}}/regroom") 加 入
   |{{/each}}
