--- a/dionysus-client/yo/templates/home/profile/psychoprofiles.jade
+++ b/dionysus-client/yo/templates/home/profile/psychoprofiles.jade
@@ -7,11 +7,9 @@ table.ui.stackable.table
       th(class="two wide") 日期
       th(class="eight wide") 心理档案
   tbody
-    {{#each items}}
     tr
       td 陆军
       td 王鹏
-      td {{module}}
+      td 心理课程
       td 2015/06/31
-      td {{summary}}
-	 {{/each}}
+      td 测试
